[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alarm-craft"
version = "1.0.1"
authors = [
  { name="Ryo Murai", email="murai.ry@gmail.com" },
]
description = "A tool to create AWS CloudWatch Alarms for your resources with specified name and tags"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
  "boto3 ==1.34.3",
  "botocore ==1.34.3",
  "pyyaml ==6.0.1",
  "jsonschema ==4.20.0",
]

[project.urls]
Documentation = "https://github.com/alarm-craft/alarm-craft/tree/main?tab=readme-ov-file#readme"
Homepage = "https://github.com/alarm-craft/alarm-craft"
Source = "https://github.com/alarm-craft/alarm-craft.git"
Issues = "https://github.com/alarm-craft/alarm-craft/issues"
Changelog = "https://github.com/alarm-craft/alarm-craft/blob/main/CHANGELOG.md"

[project.scripts]
alarm-craft = "alarm_craft.cli:run"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

# to prevent tests mutate the real aws environments.
# http://docs.getmoto.org/en/latest/docs/getting_started.html?highlight=default_region#how-do-i-avoid-tests-from-mutating-my-real-infrastructure
env = [
  "AWS_ACCESS_KEY_ID=testing",
  "AWS_SECRET_ACCESS_KEY=testing",
  "AWS_SECURITY_TOKEN=testing",
  "AWS_SESSION_TOKEN=testing",
  "AWS_DEFAULT_REGION=ap-northeast-1",
  "LOG_LEVEL=DEBUG",
]
